# bionic_reading_api

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
src/: bionic.rs  client.rs  lib.rs  secret.rs
src/requests/: convert.rs
